[package]
name = "uout"
version = "0.1.0"
authors = ["lukwol <wolanczyk.lukasz@gmail.com>"]
edition = "2018"
repository = "https://github.com/lukwol/uout"
license = "MIT/Apache-2.0"
description = "Platform agnostic, effortless writable outputs generation using μfmt crate."

[dependencies]
embedded-hal = "0.2.3"
ufmt = "0.1.0"
nb = "0.1.2"

[dev-dependencies]
heapless = "0.5.5"
